feat: info section done.

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -7,14 +7,38 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView"
+        style="@style/TextViewLight12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
         android:gravity="center"
-        android:text="info fragment"
+        android:text="بسم الله الرحمان الرحیم"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/_10sdp"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+        <include
+            android:id="@+id/includeMehr"
+            layout="@layout/include_site_info" />
+
+        <include
+            android:id="@+id/includeSSHB"
+            layout="@layout/include_site_info" />
+
+        <include
+            android:id="@+id/includeGithub"
+            layout="@layout/include_site_info" />
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
