--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="blue_700">#0288D1</color>
     <color name="blue_600">#1E88E5</color>
     <color name="blue_200">#81D4FA</color>
+    <color name="blue_100">#B3E5FC</color>
     <color name="blue_500">#03A9F4</color>
     <color name="blue_400">#29B6F6</color>
     <color name="red_600">#E53935</color>
