--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/actionSearch"
         android:icon="@drawable/ic_round_search_24"
-        android:title="جستوجو"
+        android:title="جستجو"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:iconTint="@color/black"
         app:showAsAction="ifRoom|collapseActionView" />
